updated Hungarian translation

--- a/po/wesnoth-dm/hu.po
+++ b/po/wesnoth-dm/hu.po
@@ -1,11 +1,11 @@
 # Kelemen Zoltán <kelemen_zoltan@freemail.hu>, 2009.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2009, 2011.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2009, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-01-09 15:27+0100\n"
+"POT-Creation-Date: 2011-12-19 15:14+0100\n"
+"PO-Revision-Date: 2012-01-02 16:17+0100\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Lokalize 1.1\n"
+"X-Generator: Lokalize 1.2\n"
 
 #. [campaign]: id=Delfadors_Memoirs
 #. [editor_group]: id=dm
@@ -426,35 +426,25 @@ msgstr "Ne! Methor... Ne hagyj itt!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:130
-#, fuzzy
-#| msgid ""
-#| "Heed my last words, Delfador! Journey northeast to Weldyn, and seek out "
-#| "my friend Leollyn. He will help you."
 msgid ""
 "Heed my last words, Delfador! Journey northwest to Weldyn, and seek out my "
 "friend Leollyn. He will help you."
 msgstr ""
-"Halld utolsó szavaimat, Delfador! Utazz északkeletre, Weldynbe, és keresd "
+"Halld utolsó szavaimat, Delfador! Utazz északnyugatra Weldynbe, és keresd "
 "meg Leollyn barátomat. Ő segíteni fog."
 
 #. [message]: speaker=Methor
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:143
-#, fuzzy
-#| msgid ""
-#| "Well done, Delfador! I see I have trained you well, and you are truly "
-#| "ready to seek your fortune. My traveling days are done, but it is time "
-#| "for you to journey northeast to Weldyn, and seek out my friend Leollyn. "
-#| "He will help you."
 msgid ""
 "Well done, Delfador! I see I have trained you well, and you are truly ready "
 "to seek your fortune. My traveling days are done, but it is time for you to "
 "journey northwest to Weldyn, and seek out my friend Leollyn. He will help "
 "you."
 msgstr ""
-"Jól van, Delfador! Úgy látom megfelelő a kiképzésed, most már képes vagy "
+"Jól van, Delfador! Úgy látom, megfelelő a kiképzésed, most már képes vagy "
 "egyedül megküzdeni a kihívásokkal. Én már eleget vándoroltam, de a te utad "
-"csak most kezdődik. Menj Weldynbe és keresd meg Leollyn barátomat! Segíteni "
-"fog."
+"csak most kezdődik. Menj északnyugatra Weldynbe, és keresd meg Leollyn "
+"barátomat! Segíteni fog."
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:153
@@ -1063,8 +1053,6 @@ msgstr "Hova ment?"
 
 #. [message]: speaker=Harold
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:174
-#, fuzzy
-#| msgid "Haw haw haw! Suckers!"
 msgid "Haw haw haw! Fools!"
 msgstr "Ha ha ha! Fajankók!"
 
@@ -1495,7 +1483,7 @@ msgstr "Csontzene"
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:331
 msgid "Penella"
-msgstr ""
+msgstr "Penella"
 
 #. [message]: speaker=Penella
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:335
@@ -1513,7 +1501,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:342
 msgid "Roddry"
-msgstr ""
+msgstr "Roddry"
 
 #. [message]: speaker=Roddry
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:346
@@ -1540,7 +1528,7 @@ msgstr "Régóta halott vagyok. Már a nevemre sem emlékszem."
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:356
 msgid "Melinna"
-msgstr ""
+msgstr "Melinna"
 
 #. [message]: speaker=Melinna
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:360
@@ -1572,7 +1560,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:371
 msgid "Sythan"
-msgstr ""
+msgstr "Sythan"
 
 #. [message]: speaker=Sythan
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:375
@@ -1586,7 +1574,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:378
 msgid "Hereld"
-msgstr ""
+msgstr "Hereld"
 
 #. [message]: speaker=Hereld
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:382
@@ -3202,10 +3190,8 @@ msgstr "Trgrau"
 
 #. [objective]: condition=lose
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:198
-#, fuzzy
-#| msgid "Death of Garard"
 msgid "Death of Garard II"
-msgstr "Garard elesik"
+msgstr "II. Garard elesik"
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:243
@@ -3244,6 +3230,7 @@ msgstr ""
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:259
 msgid "Agreed, but we must make haste, for the King is hard pressed."
 msgstr ""
+"Egyetértek, de sietnünk kell, mert a király nagyon szorult helyzetben van."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:267
@@ -4886,17 +4873,12 @@ msgstr "Utazó mágus"
 
 #. [unit_type]: id=Journeyman Mage
 #: data/campaigns/Delfadors_Memoirs/units/Journeyman_Mage.cfg:13
-#, fuzzy
-#| msgid ""
-#| "A mage who has just finished his or her apprenticeship is known as a "
-#| "journeyman. Journeyman mages travel far in search of employment and "
-#| "experience."
 msgid ""
 "A mage who has just finished his apprenticeship is known as a journeyman. "
 "Journeyman mages travel far in search of employment and experience."
 msgstr ""
 "A mágustanonc, ha befejezte tanulmányait, vándorútra indul. Az utazó mágusok "
-"messzi földeket bejárnak, hogy állást keressenek és gyakorlatot szerezzenek."
+"messzi földeket bejárnak, hogy állást keressenek, és gyakorlatot szerezzenek."
 
 #. [unit_type]: id=King of Wesnoth
 #: data/campaigns/Delfadors_Memoirs/units/King_of_Wesnoth.cfg:7
@@ -5133,105 +5115,3 @@ msgstr "Droni"
 #: data/campaigns/Delfadors_Memoirs/utils/sides.cfg:292
 msgid "Artor"
 msgstr "Artor"
-
-#~ msgid "Defeat Zorlan"
-#~ msgstr "Legyőzöd Zorlant"
-
-#~ msgid "Invincible Zorlan is dead? Quick, run for your lives!"
-#~ msgstr "A legyőzhetetlen Zorlan halott?! Meneküljünk!"
-
-#~ msgid "You will terrorize Wesnoth no more!"
-#~ msgstr "Többé nem tartjátok Wesnothot rettegésben!"
-
-#~ msgid "Time runs out"
-#~ msgstr "Kifutsz az időből"
-
-#~ msgid "Survive 12 turns"
-#~ msgstr "Kitartasz 12 körön keresztül"
-
-#~ msgid "THUMP!"
-#~ msgstr "BUMMM!"
-
-#~ msgid "Turns run out"
-#~ msgstr "Kifutsz az időből"
-
-#~ msgid "Ethereal Abyss"
-#~ msgstr "Éteri mélység"
-
-#~ msgid "Milestone2"
-#~ msgstr "2-es mérföldkő"
-
-#~ msgid "Translations"
-#~ msgstr "Fordítások"
-
-#~ msgid "Crown Prince of Wesnoth"
-#~ msgstr "Wesnoth koronahercege"
-
-#~ msgid ""
-#~ "A Crown Prince is the presumptive Heir to the throne, and may act with "
-#~ "very nearly the authority of the King himself."
-#~ msgstr ""
-#~ "A koronaherceg a trón várományosa, s közel azonos hatalommal rendelkezik, "
-#~ "mint maga a király."
-
-#, fuzzy
-#~ msgid ""
-#~ "Certainly! You'll be glad of our help too - this region trains the best "
-#~ "bowmen in Wesnoth."
-#~ msgstr ""
-#~ "Bizonyosan! És biztos hasznunkat fogod venni - ez a régió adja Wesnoth "
-#~ "legjobb íjászait."
-
-#~ msgid "Into the Land of the Dead"
-#~ msgstr "A Holtak Földjére"
-
-#, fuzzy
-#~ msgid "Death of allied leader"
-#~ msgstr "Delfador elesik"
-
-#~ msgid "sword"
-#~ msgstr "kard"
-
-#~ msgid "bow"
-#~ msgstr "íj"
-
-#~ msgid "missile"
-#~ msgstr "lövedék"
-
-#~ msgid "fireball"
-#~ msgstr "tűzgolyó"
-
-#~ msgid "dagger"
-#~ msgstr "tőr"
-
-#~ msgid "leadership"
-#~ msgstr "hadvezetés"
-
-#~ msgid "blade"
-#~ msgstr "penge"
-
-#~ msgid "pierce"
-#~ msgstr "páncéltörés"
-
-#~ msgid "impact"
-#~ msgstr "ütés"
-
-#~ msgid "magical"
-#~ msgstr "mágikus"
-
-#~ msgid ""
-#~ "Sparing Eldred's life proved to be a very costly mistake. Eldred betrayed "
-#~ "his father and took the throne, only to be slain in turn by Delfador, who "
-#~ "then fled to the Aethenwood with the infant child Konrad. What followed "
-#~ "is told in the tale called 'Heir to the Throne'. "
-#~ msgstr ""
-#~ "Eldred életének megkímélése végzetes hibának bizonyult. Eldred elárulta "
-#~ "apját és megszerezte a trónt, de Delfador rövidesen halálra sújtotta. "
-#~ "Delfador ezek után egy csecsemővel, Konráddal, Aethenwoodba menekült. "
-#~ "További történetét \"A trónörökös\" című hadjárat meséli el."
-
-#~ msgid "Arkadiusz D. Danilecki"
-#~ msgstr "Arkadiusz D. Danilecki"
-
-#~ msgid "Ur-thorodor"
-#~ msgstr "Ur-thorodor"
