--- a/po/wesnoth-sotbe/hu.po
+++ b/po/wesnoth-sotbe/hu.po
@@ -4,15 +4,15 @@
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Máthé Katalin <katkadu@gmail.com>, 2008., 2009.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2010, 2011.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2010, 2011, 2012.
 # Pintér Csaba <piere-d-siorac@freemail.hu>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: hu-sotbe\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-04-26 19:58+0100\n"
-"Last-Translator: Kelemen Zoltan <kelemen_zoltan@freemail.hu>\n"
+"POT-Creation-Date: 2011-12-19 15:14+0100\n"
+"PO-Revision-Date: 2012-01-02 16:47+0100\n"
+"Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
@@ -1133,7 +1133,7 @@ msgstr ""
 #. [message]: role=Scout
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/04_The_Siege_of_Barag_Gor.cfg:323
 msgid "What business do you high-and-mighty elves have with our shamans?"
-msgstr "Mi dolguk a 'nagy és hatalmas' tündéknek a mi sámánjainkkal?"
+msgstr "Mi dolguk a „nagy és hatalmas” tündéknek a mi sámánjainkkal?"
 
 #. [message]: speaker=Etheliel
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/04_The_Siege_of_Barag_Gor.cfg:328
@@ -2881,12 +2881,6 @@ msgstr ""
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:285
-#, fuzzy
-#| msgid ""
-#| "Because if we cannot decisively beat these humans, the other tribes won't "
-#| "think us strong enough to lead them. Each chieftain will try to claim the "
-#| "leadership of the horde for themselves and the humans will be able to "
-#| "break through our defenses."
 msgid ""
 "Because if we cannot decisively beat these humans, the other tribes won’t "
 "think us strong enough to lead them. Each chieftain will try to claim the "
@@ -2971,10 +2965,6 @@ msgstr ""
 
 #. [message]: speaker=Earl Lanbec'h
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1147
-#, fuzzy
-#| msgid ""
-#| "Look at that, the stupid orcs are starting to fight amongst themselves! "
-#| "Now's our chance, everyone attack!"
 msgid ""
 "Look at that, the stupid orcs are starting to fight amongst themselves! "
 "Now’s our chance, everyone attack!"
@@ -3048,15 +3038,13 @@ msgstr "Flar’Tar elesik"
 
 #. [side]: type=General, id=Arthain
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/12_Giving_Some_Back.cfg:83
-#, fuzzy
-#| msgid "Arthur"
 msgid "Arthain"
-msgstr "Arthur"
+msgstr "Arthain"
 
 #. [side]: type=Lieutenant, id=Hanak
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/12_Giving_Some_Back.cfg:103
 msgid "Hanak"
-msgstr ""
+msgstr "Hanak"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/12_Giving_Some_Back.cfg:117
@@ -3375,17 +3363,13 @@ msgstr "Telthys"
 
 #. [side]: type=General, id=Fredor
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:153
-#, fuzzy
-#| msgid "Fredrick"
 msgid "Fredor"
-msgstr "Fredrick"
+msgstr "Fredor"
 
 #. [side]: type=General, id=Georan
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:170
-#, fuzzy
-#| msgid "Georgy"
 msgid "Georan"
-msgstr "Georgy"
+msgstr "Georan"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:186
@@ -3599,16 +3583,12 @@ msgstr "Ne kényszeríts, hogy bántsalak!"
 
 #. [message]: speaker=Thelarion
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:629
-#, fuzzy
-#| msgid ""
-#| "OK OK, Shan Taum the Smug told us that that’s where the shamans were, and "
-#| "that it was a rally point and weapons depot for you orcs."
 msgid ""
 "I yield. Shan Taum the Smug told us that that’s where the shamans were, and "
 "that it was a rally point and weapons depot for you orcs."
 msgstr ""
-"Jó-jó, Shan Taum, az Öntelt mondta el nekünk, hogy hol vannak a sámánok, és "
-"azt, hogy ott vannak a fegyver és utánpótlás raktárak."
+"Jó, beszélek. Shan Taum, az Öntelt mondta el nekünk, hogy hol vannak a "
+"sámánok, és azt, hogy ott vannak a fegyver és utánpótlás raktárak."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:634
@@ -3664,7 +3644,7 @@ msgstr "Jobb lesz, ha utánanézel."
 #. [message]: speaker=second_unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:682
 msgid "I obey."
-msgstr ""
+msgstr "Értettem."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:689
@@ -4116,10 +4096,8 @@ msgstr "Visszatartod az embereket"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_The_Human_Attack.cfg:31
-#, fuzzy
-#| msgid "Earl Lanbec'h"
 msgid "Defeat Earl Lanbec’h"
-msgstr "Lanbec'h grófja"
+msgstr "Legyőzöd Lanbec’h grófját"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_The_Human_Attack.cfg:134
@@ -4815,81 +4793,3 @@ msgstr "Flar’Tar"
 #: data/campaigns/Son_Of_The_Black_Eye/utils/utils.cfg:101
 msgid "The Great Horde: upkeep cost of every unit decreased by one."
 msgstr "Nagy Horda: minden egység fenntartási költsége 1 arannyal csökkent."
-
-#~ msgid "Hank"
-#~ msgstr "Hank"
-
-#~ msgid "OK, Chief."
-#~ msgstr "Rendben, Vezér."
-
-#~ msgid "Eastern Tower"
-#~ msgstr "Keleti torony"
-
-#~ msgid "Western Tower"
-#~ msgstr "Nyugati torony"
-
-#~ msgid "Southern Tower"
-#~ msgstr "Déli torony"
-
-#~ msgid "Destruction of a tower of Prestim"
-#~ msgstr "Prestim egyik tornya megsemmisül"
-
-#~ msgid ""
-#~ "I’m not that sure. Every fortress has its own weakness. Prestim’s walls "
-#~ "are built on three towers. If one of them is destroyed, a breach will "
-#~ "allow humans to enter Prestim... which would be the end for us."
-#~ msgstr ""
-#~ "Én nem vagyok ebben ennyire biztos. Minden erődítménynek megvan a saját "
-#~ "gyengesége. Prestim falai három toronyra épültek. Ha ez egyiket ledöntik, "
-#~ "a résen a többi ember is betörhet... szükségtelen megemlítenem, hogy ez a "
-#~ "végünket jelentené."
-
-#~ msgid "Fool! We can hold that long."
-#~ msgstr "Ostoba! Addig ki fogunk tartani."
-
-#~ msgid "How?"
-#~ msgstr "Hogyan?"
-
-#~ msgid ""
-#~ "Most of their forces will cross the river by the ford where the bridge "
-#~ "previously stood. If we can hold that ford, we can hold the fortress."
-#~ msgstr ""
-#~ "A harci erőik legjava a gázlónál fog átkelni a folyón, ahol korábban a "
-#~ "híd állt. Ha sikerül megtartanunk a gázlót, megtarthatjuk az erődöt."
-
-#~ msgid "And if we fail?"
-#~ msgstr "És ha vesztünk?"
-
-#~ msgid ""
-#~ "Then, they will assault Prestim at five troops to our one. We’ll just "
-#~ "have to do the best we can."
-#~ msgstr ""
-#~ "Akkor Prestimet óriási túlerővel fogják támadni. Csak annyit tehetünk, "
-#~ "hogy mindent beleadunk."
-
-#~ msgid "J’rem"
-#~ msgstr "J’rem"
-
-#~ msgid ""
-#~ "Reinforcements, at last. We don’t have much time, the Orcish hordes are "
-#~ "on their way. To the attack!"
-#~ msgstr ""
-#~ "Erősítés, végre! Nincs sok időnk, az ork hordák már közel vannak. Támadás!"
-
-#~ msgid "No! The walls of Prestim are destroyed, we are done!"
-#~ msgstr "Nem! Prestim falai összeomlottak, végünk van!"
-
-#~ msgid "Turns run out"
-#~ msgstr "Kifutsz az időből"
-
-#~ msgid ""
-#~ "<span color='white'>Bonus objective:</span>\n"
-#~ "<span color='green'>Defeat the enemy leader</span> <small>(early finish "
-#~ "bonus)</small>"
-#~ msgstr ""
-#~ "<span color='white'>Bónusz:</span>\n"
-#~ "<span color='green'>Legyőzöd az ellenség vezérét</span> <small>(jutalom a "
-#~ "gyors befejezésért)</small>"
-
-#~ msgid " *snicker*"
-#~ msgstr "*kuncogás*"
