--- a/po/wesnoth-tb/hu.po
+++ b/po/wesnoth-tb/hu.po
@@ -1,5 +1,5 @@
 # Con Salamander (Kovács Dániel) <consalamander@kalandozok>, 2006.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2010, 2011.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2010, 2011, 2012.
 # Pintér Csaba <piere-d-siorac@freemail.hu>, 2008.
 # Kelemen Zoltán <kelemen_zoltan@freemail.hu>, 2008.
 # Gábor Udvari <gabor.udvari@gmail.com>, 2011.
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: hu-tb\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-12-27 17:08+0100\n"
-"Last-Translator: Gábor Udvari <gabor.udvari@gmail.com>\n"
+"PO-Revision-Date: 2012-01-02 16:51+0100\n"
+"Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <kde-l10n-hu@kde.org>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
@@ -178,7 +178,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:76
-#, fuzzy
 msgid ""
 "12 V, 363 YW\n"
 "Excerpt from the journal of Baran of Maghre\n"
@@ -203,7 +202,7 @@ msgstr ""
 "\n"
 "Vajon meghallja a hívásomat? Nem tudom, hogy egyáltalán megtartotta-e az "
 "amulettet; a Toen Carici sötét nap óta nem is beszéltünk. Ha miattam nem is "
-"jön, talán visszatér, hogy a falunk segítségére legyen a szükség órájában.\n"
+"jön, talán visszatér, hogy a falunk segítségére legyen a szükség órájában."
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:80
@@ -528,20 +527,7 @@ msgstr ""
 "vezetnek. Maghréből és más falvakból sem járt ott senki emberemlékezet óta. "
 "Generációról generációra adódtak át a vele kapcsolatos figyelmeztetések: "
 "állítólag az élőkre éhező elveszett lelkek kísértenek az erdőben, és aki ott "
-"hal meg, az arra kárhoztatik, hogy csatlakozzon hozzájuk.\n"
-"\n"
-"De azon már túl vagyok, hogy babonákban higgyek; eleget láttam a világból, "
-"hogy tudjam, mennyi igazság van az effajta történetek mögött. Az erdőt a "
-"tündék lakják – nem túl barátságosak, ha a szóbeszédnek egyáltalán lehet "
-"hinni. Aggódom az embereimért; a lovasok nem harcolnak jól az erdőben, a "
-"tündék pedig meglehetősen veszedelmesek lesznek a hazai terepen. Azonban "
-"vannak dolgok, amelyeket meg kell tenni, és kérdések, melyeket meg kell "
-"válaszolni. Valami nagyobb dolog zajlik. Abban semmi új sincs, hogy egy "
-"holtidéző tartja rettegésben a falusiakat, de miért nem szélednek szét a "
-"szolgái, miután megöltük? És most merre tartanak? Ami pedig a legfontosabb: "
-"miért vitték magukkal Barant?\n"
-"\n"
-"Emellett pedig... vissza akarom kapni a fivéremet."
+"hal meg, az arra kárhoztatik, hogy csatlakozzon hozzájuk."
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:50
