--- a/po/wesnoth/hu.po
+++ b/po/wesnoth/hu.po
@@ -4,7 +4,7 @@
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Széll Tamás <tomi@digiflex.hu>, 2005.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2007-2010, 2011.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2007-2010, 2011, 2012.
 # Pintér Csaba <piere-d-siorac@freemail.hu>, 2008.
 # Fábián Balázs <nermal93@freemail.hu>, 2008.
 # Barthalos Márton <barthalosmarton@yahoo.com>, 2008-2009.
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: hu-wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-19 15:14+0100\n"
-"PO-Revision-Date: 2011-12-17 14:42+0100\n"
+"PO-Revision-Date: 2012-01-02 16:20+0100\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
@@ -2479,7 +2479,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:209 data/hardwired/tips.cfg:229
 #: data/hardwired/tips.cfg:238
 msgid "<i>― The Wesnoth Tactical Guide</i>"
-msgstr "<b>― Wesnoth taktikai útmutató</i>"
+msgstr "<i>– Wesnoth taktikai útmutató</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:12
@@ -6724,19 +6724,3 @@ msgstr "$player terveinek elrejtése"
 #: src/whiteboard/manager.cpp:1088
 msgid "Whiteboard Options"
 msgstr "Lépéstervező beállítása"
-
-#~ msgid "Download"
-#~ msgstr "Letöltés"
-
-#~ msgid "Done"
-#~ msgstr "Kész"
-
-#~ msgid "Chat Log"
-#~ msgstr "Csevegési napló"
-
-#~ msgid "No time of day has been defined."
-#~ msgstr "Nincs napszak meghatározva."
-
-#~ msgid ""
-#~ "Some units have planned actions left. Do you really want to end your turn?"
-#~ msgstr "Néhány egységgel még lépést terveztél. Mégis befejezed a köröd?"
