--- a/po/wesnoth-aoi/hu.po
+++ b/po/wesnoth-aoi/hu.po
@@ -4,7 +4,7 @@
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Pintér Csaba <piere-d-siorac@freemail.hu>, 2008.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2011.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008-2012.
 # Mészáros Tamás <meszaros.tomi@hotmail.com>, 2008.
 # Németh Tamás <ntomasz@vipmail.hu>, 2008.
 msgid ""
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-aoi\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-01-09 13:04+0100\n"
+"PO-Revision-Date: 2012-01-02 16:08+0100\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.1\n"
+"X-Generator: Lokalize 1.2\n"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:11
@@ -96,7 +96,7 @@ msgstr "Az 1.4-es verziót követő történetcsiszolás és játékjavítások"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Illusztrációk és grafikai arculat"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
@@ -1515,6 +1515,3 @@ msgid ""
 msgstr ""
 "Attól félek, ez csak rosszabb lesz. Az első csatát most megnyertük, de sötét "
 "idők várnak reánk."
-
-#~ msgid "Time runs out"
-#~ msgstr "Kifutsz az időből"
