--- a/po/wesnoth-low/hu.po
+++ b/po/wesnoth-low/hu.po
@@ -2,14 +2,14 @@
 # Fábián Balázs <nermal93@freemail.hu>, 2008.
 # Kelemen Zoltán <kelemen_zoltan@freemail.hu>, 2008., 2009.
 # Gabor Udvari <gabor.udvari@gmail.com>, 2008.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2010.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2010, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: hu-low_1.5(frozen)\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-19 15:14+0100\n"
-"PO-Revision-Date: 2011-12-18 12:54+0100\n"
-"Last-Translator: Kelemen Zoltan <kelemen_zoltan@freemail.hu>\n"
+"PO-Revision-Date: 2012-01-02 17:28+0100\n"
+"Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-Bookmarks: -1,-1,-1,224,-1,-1,-1,527,-1,-1\n"
-"X-Generator: Lokalize 1.0\n"
+"X-Generator: Lokalize 1.2\n"
 
 #. [campaign]: id=LOW
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:86
@@ -556,7 +556,7 @@ msgid ""
 "Hold, Kalenz. The Ka’lian council should discuss our response. Maybe we can "
 "reach an agreement with them!"
 msgstr ""
-"Ne heveskedj, Kalenz! A Ka'lian Tanácsnak kell határoznia a válaszunk felől. "
+"Ne heveskedj, Kalenz! A Ka’lian Tanácsnak kell határoznia a válaszunk felől. "
 "Lehet, hogy meg tudunk velük egyezni!"
 
 #. [message]: id=Qumseh
@@ -589,7 +589,7 @@ msgid ""
 "We must reach the elvish council in Ka’lian and enlist their help to "
 "recapture our home."
 msgstr ""
-"El kell jutnunk Ka'lianba, a Tünde Tanács segítségét kell kérjük, hogy "
+"El kell jutnunk Ka’lianba, a Tünde Tanács segítségét kell kérjük, hogy "
 "visszaszerezzük az otthonunkat."
 
 #. [message]: id=Landar
@@ -752,7 +752,7 @@ msgid ""
 "territory the elves would rather have avoided..."
 msgstr ""
 "Kalenz és csapata éppen csak kitörtek az ork gyűrűből, mikor észrevették, "
-"hogy a Ka'lianba vezető közvetlen utat már megszállták az orkok. Kalenz "
+"hogy a Ka’lianba vezető közvetlen utat már megszállták az orkok. Kalenz "
 "otthonának lerohanása úgy tűnt, csak egy kis része volt egy hatalmas "
 "népvándorlásnak dél felé. Nem volt más lehetőség, mint kerülőt tenni olyan "
 "területen, amit a tündék inkább elkerültek volna..."
@@ -934,7 +934,7 @@ msgstr ""
 #. [scenario]: id=03_Kalian_under_Attack
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:38
 msgid "Ka’lian under Attack"
-msgstr "Ka'lian ostrom alatt"
+msgstr "Ka’lian ostrom alatt"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:98
@@ -942,7 +942,7 @@ msgid ""
 "Events at the Ka’lian took an ominous turn before Kalenz and his band could "
 "arrive there..."
 msgstr ""
-"A Ka'lianban az események kedvezőtlen fordulatot vettek, mielőtt Kalenzék "
+"A Ka’lianban az események kedvezőtlen fordulatot vettek, mielőtt Kalenzék "
 "odaértek volna..."
 
 #. [message]: speaker=unit
@@ -1057,10 +1057,10 @@ msgid ""
 "arrived at their destination, the north wind blew, and the fog lifted to "
 "reveal a grim sight..."
 msgstr ""
-"Napokig tatott, mire Kalenz és csapata a Ka'lian közelébe ért. A sűrű ködnek "
-"és erdőismeretüknek köszönhetően elkerülték az ork vadászokat. Aztán mikor "
-"már egész közel jártak feltámadt az északi szél, és elfújta a ködöt. Drámai "
-"helyzet tárult a szemük elé... "
+"Napokig tartott, mire Kalenz és csapata a Ka’lian közelébe ért. A sűrű "
+"ködnek és erdőismeretüknek köszönhetően elkerülték az ork vadászokat. Aztán "
+"mikor már egész közel jártak, feltámadt az északi szél, és elfújta a ködöt. "
+"Drámai helyzet tárult a szemük elé... "
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:897
@@ -1069,7 +1069,7 @@ msgid ""
 "behind as they are fully engaged with the defenders, we and they together "
 "might yet defeat them."
 msgstr ""
-"Óriási ork haderő közeledik Ka'lian felé! De ha hátulról meglepjük őket, "
+"Óriási ork haderő közeledik Ka’lian felé! De ha hátulról meglepjük őket, "
 "miközben a védőkkel harcolnak, együttes erővel legyőzhetjük őket."
 
 #. [message]: id=Galtrid
@@ -1139,8 +1139,8 @@ msgid ""
 "citadel of the Ka’lian, for it has stood since before your kind crawled into "
 "sunlight and will endure long after you are forgotten!"
 msgstr ""
-"Miféle 'kő' kell nektek ocsmány balfékek? Még mindig nem tanultátok meg, "
-"hogy kell kimondani az erődünk, a Ka'lian nevét? Pedig már akkor is állt, "
+"Miféle „kő” kell nektek, ocsmány balfékek? Még mindig nem tanultátok meg, "
+"hogy kell kimondani az erődünk, a Ka’lian nevét? Pedig már akkor is állt, "
 "amikor a fajtátok a napvilágra vánszorgott, s azután is állni fog, hogy "
 "belőletek hírmondó sem marad! "
 
@@ -1175,7 +1175,7 @@ msgstr ""
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:1151
 msgid "We won! The Ka’lian is safe!"
-msgstr "Győztünk! Ka'lian most már biztonságban van!"
+msgstr "Győztünk! Ka’lian most már biztonságban van!"
 
 #. [unit]: id=Huraldur, type=Elvish Scout
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:1167
@@ -1207,7 +1207,7 @@ msgstr ""
 msgid ""
 "Yes, go, Kalenz, I’ll guard the Ka’lian till our army returns from the front."
 msgstr ""
-"Rendben, menj te, Kalenz; én őrzöm Ka'liant, amíg hadseregünk visszatér a "
+"Rendben, menj te, Kalenz; én őrzöm Ka’liant, amíg hadseregünk visszatér a "
 "frontról."
 
 #. [multiplayer]: id=Chapter_One_End
@@ -1434,7 +1434,7 @@ msgid ""
 "The war with the Orcs goes poorly. The Ka’lian will need that gold back to "
 "buy arms and food, to hire artisans, to support its armies."
 msgstr ""
-"Nem állunk jól az orkok elleni háborúban. A Ka'liannak szüksége van aranyra, "
+"Nem állunk jól az orkok elleni háborúban. A Ka’liannak szüksége van aranyra, "
 "hogy fegyvereket és élelmet vásároljon, katonákat toborozzon, s fenntartsa a "
 "sereget."
 
@@ -1616,7 +1616,7 @@ msgid ""
 "But the Ka’lian’s gold is the Ka’lian’s. Would you have us divide our "
 "forces, some to return it to them while others attempt your thunder-stroke?"
 msgstr ""
-"De a Ka'lian aranya a Ka'liané. Vagy szeretnéd megosztani az erőinket, "
+"De a Ka’lian aranya a Ka’liané. Vagy szeretnéd megosztani az erőinket, "
 "néhányan visszatérnek Wesmere-be, míg mások a villámháborúdat vívják?"
 
 #. [message]: id=Kalenz
@@ -1637,7 +1637,7 @@ msgstr "Landar, a forrófejű ötleteléseknek ritkán van jó vége."
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/05_The_Saurian_Treasury.cfg:486
 msgid "It... is so. Again you speak wisdom. Very well; to the Ka’lian!"
-msgstr "Ez... jól van. Bölcs vagy. Hűtsük le magunkat; vissza a Ka'lianhoz!"
+msgstr "Ez... jól van. Bölcs vagy. Hűtsük le magunkat; vissza a Ka’lianhoz!"
 
 #. [scenario]: id=06_Acquaintance_in_Need
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:29
@@ -1758,8 +1758,8 @@ msgid ""
 "A proper contract for good money? That’s a different matter; I’m sure I can "
 "find some o’ my people willing to fight on those terms!"
 msgstr ""
-"Egy tisztes szerződés jó pénzér'? Az már más tészta; biztos vagyok benne, "
-"hogy néhány fődim hajlandó lesz küzdeni ilyen feltételek mellett!"
+"Egy tisztes szerződés jó pénzér’? Az már más tészta; biztos vagyok benne, "
+"hogy néhány fő’dim hajlandó lesz küzdeni ilyen feltételek mellett!"
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:326
@@ -1873,7 +1873,7 @@ msgid ""
 "She is right. Don’t let them lure you away from the Ka’lian, preparations "
 "for when more of them arrive return must be made."
 msgstr ""
-"Van benne igazság. Ne hagyjátok el a Ka'lian környékét, fel kell készülnünk, "
+"Van benne igazság. Ne hagyjátok el a Ka’lian környékét, fel kell készülnünk, "
 "hogy sokkal többen jönnek, ki kell építenünk a védelmünket!"
 
 #. [message]: id=Kalenz
@@ -1891,13 +1891,13 @@ msgid ""
 "The orcs have pushed us back to the Ka’lian. There is no way out. We must "
 "win here!"
 msgstr ""
-"Az orkok visszaszorítottak minket a Ka'lianhoz. Nincs kiút. Itt kell "
+"Az orkok visszaszorítottak minket a Ka’lianhoz. Nincs kiút. Itt kell "
 "győznünk!"
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:541
 msgid "This is our final stand. If they take the Ka’lian, all is lost!"
-msgstr "Ez az utolsó állásunk, ha a Ka'liant elfoglalják, minden elveszik."
+msgstr "Ez az utolsó állásunk, ha a Ka’liant elfoglalják, minden elveszik."
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:546
@@ -2204,9 +2204,9 @@ msgid ""
 "lot more if my men ha’ all kept quiet about helping elves! But the rest o’ "
 "my clan should join us in a few days."
 msgstr ""
-"Ők nem az aranyér' harcolnak, hanem a móka kedvéér'. Többen is lennénk, ha a "
-"rokonaiim elhallgatták vóna, hogy a tündéket segéljük meg. De a klánom pár "
-"nap mú'va csatlakozik hozzánk."
+"Ők nem az aranyér’ harcolnak, hanem a móka kedvéér’. Többen is lennénk, ha a "
+"rokonaim elhallgatták vóna’, hogy a tündéket segéljük meg. De a klánom pár "
+"nap mú’va csatlakozik hozzánk."
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand_utils.cfg:123
@@ -2695,7 +2695,7 @@ msgid ""
 "Before Kalenz left the Ka’lian he had ordered $left_behind_kalenz to stay "
 "and guard it."
 msgstr ""
-"Mielőtt Kalenz elhagyta Ka'liant, a következő egységeket a Ka'lian védelmére "
+"Mielőtt Kalenz elhagyta Ka’liant, a következő egységeket a Ka’lian védelmére "
 "rendelte: $left_behind_kalenz. "
 
 #. [message]: speaker=narrator
@@ -2704,7 +2704,7 @@ msgid ""
 "Before Landar left the Ka’lian he had ordered $left_behind_landar to stay "
 "and guard it."
 msgstr ""
-"Mielőtt Landar elhagyta Ka'liant, a következő egységeket a Ka'lian védelmére "
+"Mielőtt Landar elhagyta Ka’liant, a következő egységeket a Ka’lian védelmére "
 "rendelte: $left_behind_landar."
 
 #. [side]: type=Gryphon, id=Gryphon Leader
@@ -3119,7 +3119,7 @@ msgstr ""
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:39
 msgid "What do you mean, ‘diverted their attention’?"
-msgstr "Mit értesz azon, hogy 'eltereltük a figyelmüket'?"
+msgstr "Mit értesz azon, hogy „eltereltük a figyelmüket”?"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:44
@@ -3202,7 +3202,7 @@ msgid ""
 "Hmm... You seem to love king Haldric even less than the elf-lords of the "
 "Ka’lian do... How do you know all this of him?"
 msgstr ""
-"Hmm... Úgy látom, te még a ka'liani tünde uraknál is kevésbé kedveled "
+"Hmm... Úgy látom, te még a ka’liani tünde uraknál is kevésbé kedveled "
 "Haldric királyt... Honnan tudod róla mindezt?"
 
 #. [part]
@@ -3515,7 +3515,7 @@ msgid ""
 "south to the Ka’lian..."
 msgstr ""
 "Crelanu könyvével a csomagban Kalenz és csapata megkezdte hosszú útját a "
-"Ka'lian felé..."
+"Ka’lian felé..."
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/13_News_from_the_Front.cfg:118
@@ -3824,7 +3824,7 @@ msgstr ""
 #. [message]: id=Aldun
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:519
 msgid "We have no news from the Ka’lian."
-msgstr "Semmi hírünk a Ka'lianból."
+msgstr "Semmi hírünk a Ka’lianból."
 
 #. [message]: id=Aldar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:633
@@ -3872,7 +3872,7 @@ msgid ""
 "That is well! If the Ka’lian is too fearful or blind to see what is needed, "
 "we must do it ourselves."
 msgstr ""
-"Nagyszerű! Ha a Ka'lianban túl gyávák vagy vakok ülnek, s nem látják, mit "
+"Nagyszerű! Ha a Ka’lianban túl gyávák vagy vakok ülnek, s nem látják, mit "
 "kell tenniük, akkor nekünk kell cselekedni."
 
 #. [message]: id=Cleodil
@@ -5547,7 +5547,7 @@ msgid ""
 "increase for him.  This allows Cleodil to give Kalenz extra points of "
 "healing at the beginning of your turn."
 msgstr ""
-"gyógyít +4-et:\n"
+"+4-et gyógyít:\n"
 "Ha egy erdőtündér különleges kapcsolatba kerül egy másik személlyel, megnő a "
 "gyógyítási képessége is irányában. Cleodil ezért Kalenzet plusz pontokkal "
 "gyógyítja."
